[gd_scene load_steps=5 format=3 uid="uid://bqxvhxqxqxqxr"]

[ext_resource type="Script" uid="uid://bl36t2owtpy2q" path="res://algorithms/machinelearning/clustering_algorithms/ClusteringAlgorithms.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1)
emission_energy_multiplier = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1)
emission_energy_multiplier = 0.3

[node name="ClusteringAlgorithms" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="DataPoints" type="Node3D" parent="."]

[node name="Cluster1" type="Node3D" parent="DataPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="Cluster1Particles" type="Node3D" parent="DataPoints/Cluster1"]

[node name="Cluster1Label" type="CSGBox3D" parent="DataPoints/Cluster1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(2, 0.3, 0.3)

[node name="Cluster2" type="Node3D" parent="DataPoints"]

[node name="Cluster2Particles" type="Node3D" parent="DataPoints/Cluster2"]

[node name="Cluster2Label" type="CSGBox3D" parent="DataPoints/Cluster2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(2, 0.3, 0.3)

[node name="Cluster3" type="Node3D" parent="DataPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0)

[node name="Cluster3Particles" type="Node3D" parent="DataPoints/Cluster3"]

[node name="Cluster3Label" type="CSGBox3D" parent="DataPoints/Cluster3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(2, 0.3, 0.3)

[node name="Centroids" type="Node3D" parent="."]

[node name="Centroid1" type="Node3D" parent="Centroids"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="Centroid1Core" type="CSGSphere3D" parent="Centroids/Centroid1"]
material_override = SubResource("StandardMaterial3D_2")
radius = 0.4

[node name="Centroid1Label" type="CSGBox3D" parent="Centroids/Centroid1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(2.5, 0.3, 0.3)

[node name="Centroid2" type="Node3D" parent="Centroids"]

[node name="Centroid2Core" type="CSGSphere3D" parent="Centroids/Centroid2"]
material_override = SubResource("StandardMaterial3D_2")
radius = 0.4

[node name="Centroid2Label" type="CSGBox3D" parent="Centroids/Centroid2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(2.5, 0.3, 0.3)

[node name="Centroid3" type="Node3D" parent="Centroids"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0)

[node name="Centroid3Core" type="CSGSphere3D" parent="Centroids/Centroid3"]
material_override = SubResource("StandardMaterial3D_2")
radius = 0.4

[node name="Centroid3Label" type="CSGBox3D" parent="Centroids/Centroid3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(2.5, 0.3, 0.3)

[node name="ClusteringAlgorithm" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0)

[node name="AlgorithmCore" type="CSGBox3D" parent="ClusteringAlgorithm"]
material_override = SubResource("StandardMaterial3D_3")
size = Vector3(4, 2, 2)

[node name="AlgorithmLabel" type="CSGBox3D" parent="ClusteringAlgorithm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(3, 0.3, 0.3)

[node name="DataFlow" type="Node3D" parent="."]

[node name="FlowParticles" type="Node3D" parent="DataFlow"]

[node name="TrainingMetrics" type="Node3D" parent="."]

[node name="InertiaMeter" type="Node3D" parent="TrainingMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, 0)

[node name="InertiaBase" type="CSGBox3D" parent="TrainingMetrics/InertiaMeter"]
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(4, 0.2, 1)

[node name="InertiaIndicator" type="CSGSphere3D" parent="TrainingMetrics/InertiaMeter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_3")
radius = 0.3

[node name="SilhouetteMeter" type="Node3D" parent="TrainingMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 8, 0)

[node name="SilhouetteBase" type="CSGBox3D" parent="TrainingMetrics/SilhouetteMeter"]
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(4, 0.2, 1)

[node name="SilhouetteIndicator" type="CSGSphere3D" parent="TrainingMetrics/SilhouetteMeter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")
radius = 0.3

[node name="Grid" type="Node3D" parent="."]

[node name="GridLines" type="Node3D" parent="Grid"]
